--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Snooze"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LightScreen"/>
-        <activity android:name=".MusicScreen" />
-        <activity android:name=".SeatScreen" />
+        <activity android:name=".LightScreen"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".MusicScreen"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".SeatScreen"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
