--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
 
+    implementation 'com.android.volley:volley:1.1.1'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 }
