--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sleepingcapsule">
 
+    <supports-screens
+        android:xlargeScreens="true"
+        android:largeScreens="true"/>
     <uses-permission
         android:name="android.permission.INTERNET"/>
     <application
